--- a/linkler.html
+++ b/linkler.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>img ornekleri</title>
+
 </head>
 <body>
+    <h3>Link Ornekleri</h3> <!-- target="_blank" ile gidilecek sayfayi yeni sekmede acacak-->
+    <a href="img-gorsel.html" target="_blank">Img ornekleri bulunan sayfa</a>
+    <!-- mail e yonlendirmek icin mailto: , telefondan aramak icin tel: kullanilir -->
+    <a href="mailto:info@kodluyoruz.org"><br>Mail atmak icin</a>
+    <a href="tel:+39 123456789"><br>Aramak icin</a>
+    <a href="#enalt"><br>En Alta Git</a>
+
     <h3>img ornekleri</h3>
     <img src="https://image.freepik.com/free-photo/white-cat-lies-woman-s-knees_8353-539.jpg" alt="img gelmesinde hata olustu" 
     title="internetten alinmis ornek resim" align="center" border="4" />
@@ -18,12 +25,9 @@
         <area shape="rect" coords="15,25,65,42" href="https://www.comu.edu.tr/" alt="COMU">
         <area shape="circle" coords="120,102,185,134" href="https://www.ktun.edu.tr/" alt="KTUN">
     </map>
-    <h3>onload ve js kullanimi</h3>
-    <img src="https://image.freepik.com/free-photo/white-cat-lies-woman-s-knees_8353-539.jpg" alt="" onload="imgupload()">
-    <script>
-        function imgupload(){
-            alert("Resim Yuklendi");
-        }
-    </script>
-  </body>
+    <!-- yukarda cagirdigimiz id nin icerigi-->
+    <h3 id="enalt">En Alt kisim</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus quam aperiam sit inventore cumque amet ut dolores perferendis, quia soluta id pariatur earum sequi provident nemo ullam eaque distinctio perspiciatis est quis illum similique voluptatum. Quis eaque ducimus iure nisi quidem ipsum provident consequatur quia!</p>
+
+</body>
 </html>
